--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <html>
   <head>
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-07BGR3LPXZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-07BGR3LPXZ');
+</script>
+
     <title>Vector Field Based Volume Peeling for Multi-Axis Machining</title>
   </head>
   <body>
