--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   </head>
   <body>
     The source code will be released after the acceptance of the paper!
+
+    <iframe width="930" height="523" src="https://www.youtube.com/embed/Bzt2oe6YYh8" title="Vector Field Based Volume Peeling for Multi-Axis Machining" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html?
