--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <title>Vector Field Based Volume Peeling for Multi-Axis Machining</title>
   </head>
   <body>
-    The source code will be released after the acceptance of the paper!
-
+    The source code will be released after the acceptance of the journal version of the paper!
+    <br>
     <iframe width="930" height="523" src="https://www.youtube.com/embed/Bzt2oe6YYh8" title="Vector Field Based Volume Peeling for Multi-Axis Machining" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
 </html?
