--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <title>Vector Field Based Volume Peeling for Multi-Axis Machining</title>
   </head>
   <body>
+    Link to the paper: <a href="https://arxiv.org/abs/2308.00472"> Click here </a>
+
+    <br>
+    <br>
     The source code will be released after the acceptance of the journal version of the paper!
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfie77JIhhKfFdWOypL8_WyOyYHWPxobAU-Gfi2CAXg-s3omw/viewform?embedded=true" width="640" height="427" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    <br>
     <br>
     <iframe width="930" height="523" src="https://www.youtube.com/embed/Bzt2oe6YYh8" title="Vector Field Based Volume Peeling for Multi-Axis Machining" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
   </body>
